Fixed heading alignment on mobile.

--- a/style.css
+++ b/style.css
@@ -2375,3 +2375,11 @@ h2.pdf-heading
 	background: url("images/pdf_download.png") right center no-repeat transparent;
 	display: inline-block;	
 }
+
+@media screen and (max-width: 767px) {
+	.entry-header .title, .entry-header h1.title, .entry-header h1.entry-title
+	{
+		padding: 0.35em 20px;
+	}
+}
+
